// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snapshots renders brand color correctly 1`] = `
<button
  class="🅲-button button-primary button-color-success"
  type="button"
>
  Componentry
</button>
`;

exports[`<Button /> Snapshots renders defaults correctly 1`] = `
<button
  class="🅲-button button-primary"
  type="button"
>
  Componentry
</button>
`;

exports[`<Button /> Snapshots renders large outline correctly 1`] = `
<button
  class="🅲-button button-primary button-lg"
  type="button"
>
  Componentry
</button>
`;
